--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
             background: linear-gradient(to bottom, rgba(0, 123, 255, 0.5), rgba(0, 0, 0, 0.8));
             margin-bottom: 20px;
         }
-
+/* Media query for small screens */
+@media (max-width: 768px) {
+    header {
+        display: block;
+        text-align: center; /* Center content when in block mode */
+    }
+}
         header img {
             width: 200px;
             height: 200px;
