--- a/index.html
+++ b/index.html
@@ -171,8 +171,13 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
             display: none;
             z-index: 1000;
-        }
 
+        }
+        @media (max-width: 768px) {
+            .popup-modal {
+       width:80%
+    }
+}
         .popup-modal .close {
             position: absolute;
             top: 6px;
